--- a/Part3/rate-repository-app/package.json
+++ b/Part3/rate-repository-app/package.json
@@ -11,10 +11,13 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.3",
+    "@expo/metro-config": "^0.17.4",
     "@expo/metro-runtime": "~3.1.1",
     "expo": "^50.0.17",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
