--- a/Part4/rate-repository-app/package.json
+++ b/Part4/rate-repository-app/package.json
@@ -38,7 +38,10 @@
     "react-native": "0.73.6",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.23.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-linking": "~6.2.2",
+    "expo-modules-core": "~1.11.13",
+    "jest-expo": "~50.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -49,9 +52,9 @@
     "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-native": "^4.1.0",
-    "expo-modules-core": "^1.12.10",
+    "expo-modules-core": "~1.11.13",
     "jest": "^29.7.0",
-    "jest-expo": "^51.0.1",
+    "jest-expo": "~50.0.4",
     "react-devtools": "^5.1.0",
     "react-test-renderer": "^18.2.0"
   },
