--- a/Part4/rate-repository-app/package.json
+++ b/Part4/rate-repository-app/package.json
@@ -28,20 +28,21 @@
     "@expo/metro-config": "^0.17.4",
     "@expo/metro-runtime": "~3.1.1",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "expo": "^50.0.17",
+    "expo-linking": "~6.2.2",
+    "expo-modules-core": "~1.11.13",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
     "graphql": "^15.8.0",
+    "jest-expo": "~50.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.23.0",
-    "yup": "^1.4.0",
-    "expo-linking": "~6.2.2",
-    "expo-modules-core": "~1.11.13",
-    "jest-expo": "~50.0.4"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
