Exercise 10.24: filtering the reviewed repositories list

--- a/Part4/rate-repository-app/package.json
+++ b/Part4/rate-repository-app/package.json
@@ -43,6 +43,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.23.0",
+    "use-debounce": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
